--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
+  font-family: "Rubik Variable", sans-serif;
+}
+
+.text-xxs {
+  font-size: 0.5rem /* 12px */;
+  line-height: 0.75rem /* 16px */;
+}
+
+.principal-bg-gradient {
+  background: hsla(273, 75%, 67%, 1);
+
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    180deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    180deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    180deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#B16CEA", endColorstr="#FF5E69", GradientType=1 );
+}
+
+.principal-text-gradient {
+  background-image: hsla(273, 75%, 67%, 1);
+
+  background-image: linear-gradient(
+    90deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  background-image: -moz-linear-gradient(
+    90deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  background-image: -webkit-linear-gradient(
+    90deg,
+    hsla(273, 75%, 67%, 1) 0%,
+    hsla(356, 100%, 68%, 1) 36%,
+    hsla(18, 100%, 67%, 1) 71%,
+    hsla(31, 100%, 65%, 1) 100%
+  );
+
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#B16CEA", endColorstr="#FF5E69", GradientType=1 );
 }
